--- a/src/main/java/view/clienteView.form
+++ b/src/main/java/view/clienteView.form
@@ -194,7 +194,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="1" pref="150" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="1" pref="156" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -326,7 +326,7 @@
                           <Component id="idClienteField" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="consultar" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="103" alignment="0" groupAlignment="3" attributes="0">
